<?xml version="1.0" encoding="utf-8"?><!--
  ~  Created by Sumeet Kumar on 5/11/20 9:48 AM
  ~  Copyright (c) 2020 . MI.BO All rights reserved.
  ~  Last modified 5/10/20 12:30 PM
  ~  Mibo Hexa - app
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@id/navigation_calendar"
            android:icon="@drawable/ic_dashboard_calendar"
            android:title="@string/schedule_title" />
        <item
            android:id="@+id/nav_measurement"
            android:icon="@drawable/ic_qr_24dp"
            android:title="@string/measurement" />


    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/info_mark"
                android:title="@string/faq" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
