<?xml version="1.0" encoding="utf-8"?><!--
  ~  Created by Sumeet Kumar on 1/12/20 4:19 PM
  ~  Copyright (c) 2020 . MI.BO All rights reserved.
  ~  Last modified 1/12/20 8:24 AM
  ~  Mibo Hexa - app
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ch6"
            android:icon="@drawable/ic_nfc_black_24dp"
            android:title="@string/booster_6ch" />
        <item
            android:id="@id/navigation_calendar"
            android:icon="@drawable/ic_dashboard_calendar"
            android:title="@string/schedule_title" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/bottom_bar_item_3"
            android:title="@string/scan_devices" />
        <item
            android:id="@id/navigation_barcode"
            android:icon="@drawable/ic_qr_24dp"
            android:title="@string/scan_product" />
<!--        <item-->
<!--            android:id="@+id/nav_test3"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/rxl_title" />-->
<!--        <item-->
<!--            android:id="@+id/nav_test4"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="RXT Test" />-->

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
