<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ch6"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Six Channel" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Scan Devices" />
        <item
            android:id="@+id/nav_rxl"
            android:icon="@drawable/ic_menu_manage"
            android:title="ReFlex" />
        <item
            android:id="@+id/nav_test2"
            android:icon="@drawable/ic_menu_manage"
            android:title="Test" />

      <item
            android:id="@+id/nav_test3"
            android:icon="@drawable/ic_menu_manage"
            android:title="ReFlex2" />
        <item
            android:id="@id/navigation_rxl_test"
            android:icon="@drawable/ic_menu_manage"
            android:title="RXL Test" />
        <item
            android:id="@id/navigation_barcode"
            android:icon="@drawable/ic_add_circle_24dp"
            android:title="Scan Product" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
