<?xml version="1.0" encoding="utf-8"?><!--
  ~  Created by Sumeet Kumar on 5/27/20 2:59 PM
  ~  Copyright (c) 2020 . MI.BO All rights reserved.
  ~  Last modified 5/13/20 4:48 PM
  ~  Mibo Hexa - app
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_register_info1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:fontFamily="@string/font_roboto_medium"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/grid_2x"
        android:src="@drawable/img_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_info1" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_2x"
        android:text="@string/forget_pwd_hint"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_2x"
        android:background="@drawable/profile_edittext"
        android:ems="7"
        android:hint="@string/email_hint"
        android:imeOptions="actionSend"
        android:textColorHint="@color/grey"
        android:textColor="@color/textColor"
        android:inputType="textEmailAddress"
        android:padding="@dimen/grid_1x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send_otp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/grid_2x"
        android:background="@drawable/login_button_primary"
        android:ems="13"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>