<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/grid_3x">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification_code"
        android:textColor="@color/textColorApp"
        android:textSize="@dimen/text_size_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/grid_2x"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            android:id="@+id/otp_ccp_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:ccp_clickable="false"
            android:enabled="false"
            app:ccp_defaultNameCode="AE"
            app:ccp_hideNameCode="true"
            app:ccp_dialogTextColor="@color/textColor"
            app:ccp_showFullName="false"
            app:ccp_showFlag="false"
            app:ccp_textColor="@color/textColor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/otp_et_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/login_edittext_corner"
            android:padding="@dimen/grid_1x"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:digits="@string/numbers_only"
            android:enabled="false"
            android:hint="@string/phone_number_hint"
            android:imeOptions="actionSend"
            android:inputType="number"
            android:maxLength="14" />

        <ImageView
            android:id="@+id/otp_edit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/grid_1x"
            android:visibility="visible"
            android:src="@drawable/ic_edit_black_24dp"
            android:tint="@color/textColor" />

    </LinearLayout>

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/otp_update_number"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_marginTop="@dimen/grid_3x"-->
    <!--        android:layout_marginBottom="@dimen/grid_2x"-->
    <!--        android:background="@drawable/login_button_accent"-->
    <!--        android:paddingStart="@dimen/grid_2x"-->
    <!--        android:paddingEnd="@dimen/grid_2x"-->
    <!--        android:text="@string/update_number"-->
    <!--        android:textColor="@color/white" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/otp_btn_otp_send"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/grid_3x"
        android:background="@drawable/login_button_accent"
        android:visibility="gone"
        android:ems="13"
        android:text="@string/send_otp"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="@dimen/grid_2x"
        android:src="@drawable/ic_register_otp_sent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_2x"
        android:text="@string/enter_your_otp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_have_sent_otp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_small" />

    <life.mibo.views.OtpEditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:digits="0123456789"
        android:inputType="number"
        android:layout_marginTop="@dimen/grid_2x"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:maxLength="4"
        android:textSize="30sp"
        app:oev_mask_character="****"
        app:oev_box_style="rounded_box"
        app:oev_length="4"
        app:oev_text_color="@color/textColor"
        app:oev_primary_color="@color/colorPrimary"
        app:oev_secondary_color="@color/textColorApp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_1x"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/grid_1x"
            android:layout_marginTop="@dimen/grid_1x"
            android:text="@string/resend_otp"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_small" />

<!--        <Chronometer-->
<!--            android:id="@+id/chronometer"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            />-->
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_otp_confirmed"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/grid_3x"
        android:layout_marginBottom="@dimen/grid_2x"
        android:background="@drawable/login_button_primary"
        android:ems="13"
        android:text="@string/verify"
        android:textColor="@color/white" />


</LinearLayout>